# RenderMapperPro

./: .coverage  .gitignore  BlenderVideoMapper.spec  README.md  THIRD_PARTY_LICENSES.md  app.py  app_qt.py  app_version.py  blender_discover.py  blender_worker.py  build_standalone.sh  c4d_discover.py  c4d_worker.py  dialogs.py  icons.py  media.py  panels.py  patch.py  pw_runtime_hook.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  theme.py  ui_dialogs.py  ui_widgets.py  workers.py
.github/: dependabot.yml
.github/workflows/: build.yml
app_window/: base.py  deadline_mixin.py  preset_mixin.py  queue_mixin.py  reporting_mixin.py  runtime_mixin.py  update_mixin.py  watch_mixin.py
assets/: app_icon.icns  web_scene.html
core/: __init__.py  archive.py  asset_grouping.py  crash.py  discovery.py  download.py  jobs.py  logging_setup.py  metrics.py  models.py  naming.py  reporting.py  runner.py  runtime.py  utils.py  web_render.py
deadline/RenderMapperPro/: RenderMapperPro.param  RenderMapperPro.py
installer/: entitlements.plist  make_dmg.sh  windows.iss
prototypes/web_render/: README.md  render_poc.py  scene.html  verify_backend.py
tests/: conftest.py  test_ao_options.py  test_app_state.py  test_archive.py  test_asset_grouping.py  test_asset_grouping_jobs.py  test_automatch.py  test_av_args_parity.py  test_crash.py  test_discovery.py  test_download.py  test_jobs.py  test_logging_setup.py  test_logs_progress.py  test_media.py  test_metrics.py  test_models.py  test_naming.py  test_new_job_modifiers.py  test_pattern_builder.py  test_process.py  test_profile_parity.py  test_queue_independence.py  test_render_progress.py  test_reporting.py  test_runner.py  test_session_launch.py  test_smoke_ui.py  test_theme_qss.py  test_tonemap_options.py  test_ui_dialogs.py  test_update_notes.py  test_utils.py  test_versions.py  test_watch_wiring.py  test_web_driver.py  test_web_render.py  test_web_render_smoke.py  test_web_vendor.py
tools/: fetch_ffmpeg.py  publish_update.py  vendor_three.py
