[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "render-mapper-pro"
description = "Map videos onto 3D-scene materials and render them headlessly via Blender, Cinema 4D/Redshift, or three.js."
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "PySide6==6.11.1",
]

[project.optional-dependencies]
# The headless three.js (.glb/.gltf) backend. Chromium is fetched on demand.
web = ["playwright==1.60.0"]

[dependency-groups]
# PEP 735 dev group; install with `uv sync` or `pip install --group dev`.
dev = [
    "ruff>=0.9,<1",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-timeout>=2.3",
    "pytest-cov>=5",
    "pyinstaller==6.20.0",
]

# Version is the single source of truth in app_version.py.
[tool.hatch.version]
path = "app_version.py"

# Flat module layout (not a src/ package), so list what ships in a wheel.
[tool.hatch.build.targets.wheel]
only-include = [
    "app_qt.py", "panels.py", "workers.py", "media.py", "theme.py", "icons.py",
    "ui_widgets.py", "dialogs.py", "app_version.py",
    "blender_worker.py", "blender_discover.py", "c4d_worker.py", "c4d_discover.py",
    "core", "assets",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# A global per-test timeout turns a hang (e.g. the Qt global-state deadlock) into
# a failed test instead of a stuck CI job.
addopts = "--timeout=120"

[tool.coverage.run]
source = ["core"]
omit = ["*/deadline/*"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
line-length = 120
target-version = "py312"
# deadline/ is excluded deliberately: the plugin runs inside Deadline's own
# (old) Python host on the farm, so py312 modernisation could break it there.
extend-exclude = ["vendor", "dist", "build", ".venv", "deadline"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501", "B008",
    # Intentional typography in user-facing strings/comments (curly quotes, em-dashes).
    "RUF001", "RUF002", "RUF003",
    # try/except/pass is fine and clearer than contextlib.suppress in hot paths.
    "SIM105",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
# Type-check the bodies of un-annotated functions too — catches deprecated Qt
# enum accesses (Qt.AlignCenter → Qt.AlignmentFlag.AlignCenter) that hide there.
check_untyped_defs = true
exclude = ["build/", "dist/", "vendor/"]
